Include datasource config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 
 apiPrefix=/api
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/employee_db
+spring.datasource.username=user
+spring.datasource.password=password
+spring.datasource.driver-class-name=org.postgresql.Driver
